[project]
name = "MPIA-DS-FAQ"
version = "2.0.0"
description = "A collection of small documents on specific challenges or problems."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "corner>=2.2.3",
    "cython>=3.1.2",
    "dask>=2025.5.1",
    "distributed>=2025.5.1",
    "emcee>=3.1.6",
    "funsor>=0.4.5",
    "ghp-import>=2.1.0",
    "graphviz>=0.21",
    "joblib>=1.5.1",
    "jupyter-book>=1.0.4.post1",
    "jupytext>=1.17.2",
    "matplotlib>=3.10.3",
    "mystmd>=1.5.1",
    "numpy>=2.3.1",
    "numpyro>=0.18.0",
    "pandas>=2.3.1",
    "pip>=25.1.1",
    "pymc>=5.23.0",
    "pytest>=8.4.1",
    "scipy>=1.16.0",
    "seaborn>=0.13.2",
    "snakemake>=9.8.0",
    "tqdm>=4.67.1",
]
